// ======================================================
// 2gether / 유대감 — 채팅(chat) + 알림(notification) ERD
// DB: PostgreSQL / Spring Boot 3.5 + JPA(@Enumerated STRING)
//
// 원칙:
//  - 이 파일은 "채팅·알림 테이블만" 정의한다.
//  - users, gathering, tags 등 기존 테이블은 정의하지 않고
//    bigint 컬럼 + 주석으로 "id 참조"만 한다. (외부 테이블 절대 수정/재정의 안 함)
//  - 그래서 inline ref 는 이 파일 안 테이블끼리만 건다.
//  - enum 은 PG native enum 대신 varchar 매핑 전제(@Enumerated STRING).
//
// dbdiagram.io 주의: 부분 유니크(WHERE ...)·CHECK 는 DBML 문법에 없어
//                   주석으로만 표기(실제 DDL/마이그레이션에서 반영).
// ======================================================


// ─────────────────────────── Enum

Enum chat_room_type {
  GROUP         [note: '모임 확정 시 생성되는 단체 채팅방']
  DIRECT        [note: '1:1 채팅방']
  QUICK_CONNECT [note: '6자리 코드 기반 안심 커넥트 방']
}

Enum chat_member_role {
  OWNER  [note: '방장. 공지 작성/강퇴 권한']
  MEMBER [note: '일반 참여자']
}

Enum message_type {
  TEXT   [note: '텍스트 메시지']
  IMAGE  [note: '이미지 메시지(실데이터는 message_attachment)']
  SYSTEM [note: '입장/퇴장/확정 등 시스템 메시지. sender_id NULL']
  CARD   [note: '사용자가 공유한 AI 추천 카드. meta.kind 로 종류 구분']
}

Enum quick_code_status {
  ACTIVE
  EXPIRED
  USED
}

Enum notification_type {
  GATHERING_APPLICATION [note: '내 모임에 참가 신청 도착']
  APPLICATION_ACCEPTED  [note: '내 신청이 수락됨']
  APPLICATION_REJECTED  [note: '내 신청이 거절됨']
  GATHERING_CONFIRMED   [note: '참여 모임이 확정됨']
  GATHERING_CANCELED    [note: '참여 모임이 취소됨']
  CHAT_NOTICE           [note: '채팅방 새 공지']
  SYSTEM                [note: '기타 시스템 알림']
}


// ======================================================
// 채팅방
// ======================================================

Table chat_room {
  id bigint [pk, increment, note: '채팅방 고유번호']

  type chat_room_type [not null, note: 'GROUP / DIRECT / QUICK_CONNECT']

  gathering_id bigint [
    unique,
    note: '[외부참조] gathering.id — 모임 자동 생성 방(1:1). DIRECT·QUICK_CONNECT는 NULL. 외부 테이블 수정 안 함'
  ]

  title varchar(120) [
    note: '표시명. GROUP=모임 제목 스냅샷. DIRECT는 앱에서 상대 이름 계산(NULL 허용)'
  ]

  last_message_id bigint [
    note: '[비정규화 캐시] 마지막 메시지 id. 최근 방 조회·미리보기용(하드 FK 아님, 소프트 참조)'
  ]

  last_message_at timestamptz [
    note: '방 목록 최근순 정렬 기준(order by last_message_at desc)'
  ]

  closed_at timestamptz [
    note: 'QUICK_CONNECT 종료/자동삭제 시각. NULL이면 활성'
  ]

  created_at timestamptz [not null, default: `now()`]

  Note: '''
  채팅방 본체.
  - 모임 생성 시 자동 채팅방: gathering confirm 트랜잭션에서 type=GROUP + gathering_id 로 생성.
  - last_message_* 캐시로 "최근 채팅방 조회"와 "마지막 메시지 조회"를 동시에 만족.
  '''
}

Table chat_room_member {
  id bigint [pk, increment, note: '채팅방 참여자 고유번호']

  chat_room_id bigint [not null, ref: > chat_room.id, note: '참여 중인 채팅방']

  user_id bigint [
    not null,
    note: '[외부참조] users.id — 참여 사용자'
  ]

  role chat_member_role [not null, default: 'MEMBER', note: '공지/강퇴 권한 구분']

  last_read_message_id bigint [
    note: '내가 마지막으로 읽은 메시지 id. 안읽음 수 = 이 값보다 큰 메시지 개수'
  ]

  notification_enabled boolean [
    not null,
    default: true,
    note: '방별 알림 on/off(음소거)'
  ]

  joined_at timestamptz [not null, default: `now()`, note: '입장 시각']

  left_at timestamptz [
    note: '나가기(소프트) 시각. NULL이면 현재 참여 중'
  ]

  Note: '''
  채팅방 참가자 + 읽음 상태.
  - 읽음 처리: chat_room.last_message_id vs 이 last_read_message_id 비교로 배지 계산.
  - 채팅방 나가기: left_at 세팅(하드 삭제 안 함). 멤버 조회는 left_at IS NULL 조건.
  '''

  indexes {
    (chat_room_id, user_id) [unique, note: '같은 방 중복 참여 방지']
    (user_id) [note: '내 채팅방 목록 조회']
  }
}


// ======================================================
// 메시지
// ======================================================

Table message {
  id bigint [pk, increment, note: '메시지 고유번호. 단조 증가 → 정렬/커서 페이징/읽음 비교']

  chat_room_id bigint [not null, ref: > chat_room.id, note: '메시지가 속한 방']

  sender_id bigint [
    note: '[외부참조] users.id — 작성자. SYSTEM 메시지는 NULL'
  ]

  type message_type [not null, default: 'TEXT', note: 'TEXT/IMAGE/SYSTEM/CARD']

  content text [
    note: '텍스트 본문 또는 시스템 안내문. 이미지 URL은 여기 아님(attachment)'
  ]

  meta jsonb [
    note: 'SYSTEM 상세({systemType,userId}) · CARD 카드데이터({kind,refId,snapshot}) 흡수. 스키마 변경 없이 확장'
  ]

  deleted_at timestamptz [
    note: '메시지 소프트 삭제("삭제된 메시지입니다"). NULL이면 정상'
  ]

  client_message_id uuid [
    note: '소켓 재전송 멱등키(중복 방지). 실시간 대비 미리 확보'
  ]

  created_at timestamptz [not null, default: `now()`, note: '전송 시각(sent_at)']

  indexes {
    (chat_room_id, id) [note: '방별 최신순 커서(keyset) 페이징']
    (chat_room_id, client_message_id) [unique, note: '방 내 멱등 전송 보장(NULL 다중 허용)']
  }
}

Table message_attachment {
  id bigint [pk, increment, note: '첨부 고유번호']

  message_id bigint [not null, ref: > message.id, note: '첨부가 속한 메시지']

  file_url varchar(300) [not null, note: '이미지/파일 원본 URL']
  thumbnail_url varchar(300) [note: '목록·미리보기용 썸네일']
  content_type varchar(100) [note: 'MIME 타입(image/png 등)']
  size int [note: '바이트 크기. 업로드 용량 제한 검증']
  width int [note: '렌더 레이아웃용 가로 픽셀']
  height int [note: '렌더 레이아웃용 세로 픽셀']
  sort_order smallint [not null, default: 0, note: '다중 이미지 순서']

  Note: 'IMAGE 메시지의 실제 파일 메타. content 겸용 문제 제거 + 다중/썸네일 지원'
}


// ======================================================
// 공지
// ======================================================

Table chat_notice {
  id bigint [pk, increment, note: '공지 고유번호']

  chat_room_id bigint [not null, ref: > chat_room.id, note: '공지가 속한 방']

  message_id bigint [
    ref: > message.id,
    note: '고정한 메시지 참조(선택). 메시지 없이 직접 공지도 가능'
  ]

  content varchar(500) [not null, note: '공지 본문']

  created_by bigint [
    not null,
    note: '[외부참조] users.id — 작성자(role=OWNER)'
  ]

  is_active boolean [not null, default: true, note: '상단 고정 활성 여부']

  created_at timestamptz [not null, default: `now()`, note: '등록 시각(이력 보존)']

  indexes {
    (chat_room_id, is_active) [note: '활성 공지 조회. 활성 유일성은 부분 유니크(WHERE is_active)로 DDL에서 보장']
  }
}


// ======================================================
// 안심 커넥트 (Quick Connect)
// ======================================================

Table quick_connect_code {
  id bigint [pk, increment, note: '안심 커넥트 코드 고유번호']

  chat_room_id bigint [not null, unique, ref: > chat_room.id, note: '코드로 입장할 방(1:1)']

  created_by bigint [
    note: '[외부참조] users.id — 코드 생성자'
  ]

  code char(6) [not null, note: '6자리 입장 코드']

  status quick_code_status [not null, default: 'ACTIVE', note: '코드 상태']

  expires_at timestamptz [not null, note: '만료 시각']

  created_at timestamptz [not null, default: `now()`]

  indexes {
    (code) [note: '활성 코드만 유일: 부분 유니크(WHERE status=ACTIVE)를 DDL에서 보장']
  }

  Note: '일회성 코드. 만료/사용 상태 관리. 메시지 자동삭제는 Redis TTL 등으로(선택)'
}


// ======================================================
// 알림 (독립 도메인)
// ======================================================

Table notification {
  id bigint [pk, increment, note: '알림 고유번호']

  user_id bigint [
    not null,
    note: '[외부참조] users.id — 알림 받는 사람. 알림함 조회 기준'
  ]

  type notification_type [not null, note: '알림 종류(프론트 아이콘/문구 분기)']

  title varchar(120) [not null, note: '표시 제목. 발생 당시 텍스트 저장 → 원본 변경돼도 불변']

  content varchar(300) [note: '본문/미리보기']

  meta jsonb [
    note: '클릭 이동 대상({gatheringId} 또는 {roomId,messageId}) 등. FK 다중 배치 대신 유연 참조'
  ]

  read_at timestamptz [
    note: '읽음 시각. NULL이면 안읽음 → 벨 배지 = count(read_at IS NULL)'
  ]

  created_at timestamptz [not null, default: `now()`, note: '발생 시각(정렬)']

  Note: '''
  이벤트성 알림함(벨 아이콘). 채팅 메시지 배지는 여기 안 쌓고
  chat_room_member.last_read_message_id 로 계산(폭주 방지).
  gathering/chat 서비스가 이벤트 발행 → NotificationService 가 저장·전송(결합도 0).

  전송 경로: 인앱(notification 저장 + WebSocket) + 텔레그램(user_telegram 연결자).
  접속 여부와 무관하게 텔레그램 발송(단, 뮤트·디바운스는 앱에서 처리).
  '''

  indexes {
    (user_id, created_at) [note: '알림함 최신순 목록']
    (user_id, read_at) [note: '안읽음 배지 카운트']
  }
}

Table user_telegram {
  user_id bigint [
    pk,
    note: '[외부참조] users.id — 우리 사용자 : 텔레그램 = 1:1'
  ]
  telegram_chat_id bigint [not null, unique, note: '봇이 발송할 chat id. 사용자가 봇 /start(연결) 후 저장']
  linked_at timestamptz [not null, default: `now()`]

  Note: '''
  유저 ↔ 텔레그램 연결 매핑(알림 발송용).
  텔레그램 봇은 사용자가 먼저 봇을 시작해야 발송 가능하므로,
  연결한 사용자에게만 텔레그램 알림 발송. 미연결자는 인앱 알림만.
  '''
}
